<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/min_margin"
    android:orientation="vertical"
    android:padding="@dimen/pop_up_padding"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtTittleDetect"
        style="@style/pop_up_full_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_content_tittle"
        android:textAlignment="center"
        android:paddingTop="@dimen/tittle_settings" />

    <TextView
        android:id="@+id/txtEnjoying"
        style="@style/pop_up_enjoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enjoy"
        android:textAlignment="center" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginBottom="@dimen/pop_up_full_star_margin"
        android:layout_marginTop="@dimen/pop_up_full_star_margin"
        android:numStars="5"
        android:paddingTop="@dimen/language_height"
        android:paddingBottom="@dimen/language_height"
        android:progressDrawable="@drawable/rated_bar"
        android:rating="5"
        android:stepSize="1" />

    <Button
        android:id="@+id/popUpRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/min_margin"
        android:background="@color/colorPrimary"
        android:stateListAnimator="@null"
        android:text="@string/rate_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/popUpLater"
        style="@style/pop_up_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:stateListAnimator="@null"
        android:text="@string/pop_up_later"
        android:textAllCaps="false" />

</LinearLayout>