<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:background="@color/principal_content"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_detect"
        android:background="@drawable/border_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/activity_vertical_margin"
            app:srcCompat="@drawable/img_romerock_logo_gray" />


        <TextView
            android:id="@+id/rateUsDetect"
            style="@style/currencyLanguage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/language_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/currency_text_size"
            android:background="@drawable/border_language"
            android:text="@string/rateus"
            android:textAllCaps="true" />

        <RatingBar
            android:id="@+id/ratingBarMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:numStars="5"
            android:progressDrawable="@drawable/rated_bar"
            android:rating="5"
            android:stepSize="1"
            android:visibility="gone"
            android:isIndicator="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <RatingBar
            android:id="@+id/ratingBarEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:numStars="5"
            android:progressDrawable="@drawable/rated_bar_empty"
            android:rating="0"
            android:stepSize="1"
            android:visibility="visible"
            android:isIndicator="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txtNotRateYet"
            style="@style/pop_up_enjoy"
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_rate"
            android:visibility="visible"
            android:textAlignment="center"
            android:layout_below="@+id/ratingBarEmpty"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>


    <Button
        android:id="@+id/btn_detect"
        style="@style/buttonStyleMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center|center_vertical"
        android:text="@string/select_rate"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

</RelativeLayout>
